Aress7/src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bay_Markings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bay Markings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cable_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cable Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_ID__c</fullName>
        <label>Case ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Civils_Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Civils Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_On__c</fullName>
        <label>Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confirm_Dispatch_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Date to Site &amp; Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_to_Site_Count__c</fullName>
        <label>Date to Site Count</label>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_to_Site_Filled_Count__c</fullName>
        <label>Date to Site Filled Count</label>
        <summaryFilterItems>
            <field>OrderItem.Date_to_Site__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Earliest_Date_to_Site__c</fullName>
        <label>Earliest Date to Site</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FA_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FA Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fastners__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fastners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldAware_URL__c</fullName>
        <label>FieldAware URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Install_Case_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Case Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Notes__c</fullName>
        <label>Install Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Install_Notes_for_Helen__c</fullName>
        <inlineHelpText>Notes from the Install team</inlineHelpText>
        <label>Install Notes for Helen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Scheduled_Start_Date_Time__c</fullName>
        <formula>Case__r.Install_Scheduled_Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Scheduled Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Install_Status__c</fullName>
        <formula>Text(Case__r.Install_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installer Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installer_Name__c</fullName>
        <label>Installer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Order__c</fullName>
        <label>Internal Order #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <label>Job ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_To_Case__c</fullName>
        <label>Link To Case</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MCB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MCB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MIS_Site_Contact_Email__c</fullName>
        <description>Contact email that will appear on the MIS</description>
        <label>MIS Site Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MIS_Site_Contact__c</fullName>
        <description>Contact on MIS</description>
        <label>MIS Site Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_about_your_order__c</fullName>
        <inlineHelpText>Notes for Helen or Finance team about your order</inlineHelpText>
        <label>Notes about your order</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Send_Date__c</fullName>
        <label>Order Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Stages__c</fullName>
        <label>Order Stages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amy Lambourne</fullName>
                </value>
                <value>
                    <fullName>Arne Nikolaus</fullName>
                </value>
                <value>
                    <fullName>Martin Miles</fullName>
                </value>
                <value>
                    <fullName>Richard Wise</fullName>
                </value>
                <value>
                    <fullName>Shauna Black</fullName>
                </value>
                <value>
                    <fullName>Bradley Turk</fullName>
                </value>
                <value>
                    <fullName>Joshua Doyle-Tanner</fullName>
                </value>
                <value>
                    <fullName>Kostas Papadakis</fullName>
                </value>
                <value>
                    <fullName>Alex McKinney</fullName>
                </value>
                <value>
                    <fullName>Stuart Clark</fullName>
                </value>
                <value>
                    <fullName>Richard Lindop</fullName>
                </value>
                <value>
                    <fullName>James Farrier</fullName>
                </value>
                <value>
                    <fullName>Sam Biggs</fullName>
                </value>
                <value>
                    <fullName>Richard King</fullName>
                </value>
                <value>
                    <fullName>Stephen Kellett</fullName>
                </value>
                <value>
                    <fullName>Christos Polydoros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RAMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RAMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Started_On__c</fullName>
        <label>Started On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Case Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply_Manager__c</fullName>
        <label>Supply Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Helen</fullName>
                </value>
                <value>
                    <fullName>Ahshok</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking__c</fullName>
        <description>Tracking number for shipped goods</description>
        <label>Tracking #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDER.RECORDTYPE</columns>
        <columns>Internal_Order__c</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <filters>
            <field>ORDERS.EFFECTIVE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/17/2016</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>notContain</operation>
            <value>Homecharge</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Ready for Helen</value>
        </filters>
        <label>All Orders (Draft)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDER.RECORDTYPE</columns>
        <columns>Internal_Order__c</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Scheduled_Date__c</columns>
        <columns>Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.EFFECTIVE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/17/2016</value>
        </filters>
        <filters>
            <field>ORDER.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order.Managed_Installation</value>
        </filters>
        <label>All Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Orders_Dispatched</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDER.RECORDTYPE</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>Internal_Order__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ORDERS.ISREDUCTIONORDER</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Dispatched,Partially Dispatched</value>
        </filters>
        <filters>
            <field>ORDERS.EFFECTIVE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/17/2016</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>notContain</operation>
            <value>Homecharge</value>
        </filters>
        <label>All Orders (Partial &amp; Full Dispatched)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Orders_Ready_to_Dispatch</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDER.RECORDTYPE</columns>
        <columns>Internal_Order__c</columns>
        <columns>Install_Case_Created__c</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Ready for Dispatch</value>
        </filters>
        <filters>
            <field>ORDERS.EFFECTIVE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/17/2016</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>notContain</operation>
            <value>Homecharge</value>
        </filters>
        <label>All Orders (Ready to Dispatch)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hyundai_PSA_Current</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5 OR 6 OR 7)</booleanFilter>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ORDER.SHIPPING_CITY</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>Install_Case_Created__c</columns>
        <columns>Email__c</columns>
        <columns>Accepted__c</columns>
        <columns>Cable__c</columns>
        <columns>MCB__c</columns>
        <columns>FA_Check__c</columns>
        <columns>Install_Notes__c</columns>
        <columns>Scheduled_Date__c</columns>
        <columns>Job_ID__c</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDER.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order.Managed_Installation</value>
        </filters>
        <filters>
            <field>Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Scheduled_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>MCB__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Cable__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>FA_Check__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Confirm_Dispatch_Address__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Flagged Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Install_Only_Orders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>Install_Notes__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Scheduled_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDER.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order.Managed_Installation</value>
        </filters>
        <filters>
            <field>ORDERS.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>,Ready for Helen</value>
        </filters>
        <filters>
            <field>SALES.ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>JLR</value>
        </filters>
        <label>Install Only orders</label>
        <language>en_US</language>
        <sharedTo>
            <group>Supply_Chain_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Martin_s_Installs_Install_Team_View</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>Scheduled_Date__c</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>MCB__c</columns>
        <columns>Install_Case_Created__c</columns>
        <columns>Cable__c</columns>
        <columns>RAMS__c</columns>
        <columns>Confirm_Dispatch_Address__c</columns>
        <columns>FA_Check__c</columns>
        <columns>Accepted__c</columns>
        <columns>Fastners__c</columns>
        <columns>Complete__c</columns>
        <columns>Install_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDER.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order.Managed_Installation</value>
        </filters>
        <filters>
            <field>Project_Manager__c</field>
            <operation>equals</operation>
            <value>Martin</value>
        </filters>
        <filters>
            <field>Complete__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Martin&apos;s Installs (Team View)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Commercial_Install_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Richard_s_Installs</fullName>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>FieldAware_URL__c</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Scheduled_Date__c</columns>
        <columns>Email__c</columns>
        <columns>Confirm_Dispatch_Address__c</columns>
        <columns>MCB__c</columns>
        <columns>Cable__c</columns>
        <columns>Civils_Booked__c</columns>
        <columns>RAMS__c</columns>
        <columns>FA_Check__c</columns>
        <columns>Install_Notes__c</columns>
        <columns>Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDER.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order.Managed_Installation</value>
        </filters>
        <filters>
            <field>Project_Manager__c</field>
            <operation>equals</operation>
            <value>Rich</value>
        </filters>
        <label>Richard&apos;s Installs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Supply_only_orders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Notes_about_your_order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDER.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order.Non_Managed_Installation</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>contains</operation>
            <value>Ready for Helen</value>
        </filters>
        <filters>
            <field>SALES.ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>lidl</value>
        </filters>
        <label>Supply only orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TEMP_VIEW_All_Draft_Orders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>TEMP VIEW: All Draft Orders</label>
        <language>en_US</language>
        <sharedTo>
            <group>Commercial_Install_Team</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Managed_Installation</fullName>
        <active>true</active>
        <label>Managed Installation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Managed_Installation</fullName>
        <active>true</active>
        <label>Non Managed Installation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Not_all_date_to_site_is_filled</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Confirm_Dispatch_Address__c) ,Confirm_Dispatch_Address__c, Date_to_Site_Count__c != Date_to_Site_Filled_Count__c)</errorConditionFormula>
        <errorMessage>Please ensure all date to site is filled.</errorMessage>
    </validationRules>
</CustomObject>